# mlops-platform

./: pyproject.toml
src/mlops_platform/: __init__.py  config.yaml  db.db.wal
