[project]
name = "mlops-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aniket Mishrikotkar", email = "aniketmishrikotkar@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.1.3",
    "polars>=1.19.0",
    "sqlmesh[web]>=0.146.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=8.31.0",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
]
